--- a/pages/article/article.wxss
+++ b/pages/article/article.wxss
@@ -21,7 +21,7 @@
   position: relative;
 }
 
-.article_list_scroll_content{
+.article_list_scroll_content {
   position: absolute;
   left: 0;
   right: 0;
@@ -29,3 +29,26 @@
   bottom: 0;
   overflow-y: auto;
 }
+
+.article_list_item {
+  width: 100%;
+  height:89px;
+  max-height: 100px;
+  /* overflow: hidden; */
+}
+.article_content_item {
+  height: 50px;
+}
+
+
+.van-card__desc {
+  height: 16px;
+}
+view .list_cls.van-card {
+  height: 88px !important;
+  overflow: hidden;
+  word-break: break-all;
+  /* white-space: nowrap; */
+  text-overflow: ellipsis;
+}
+
